// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPicker renders with defaultProps 1`] = `
<div
  className="ax-card ax-card--elevation-x0 ax-card--size-medium ax-card--color-dark"
  onClick={undefined}
>
  Lorem Ipsum
</div>
`;

exports[`DataPicker renders with value 1`] = `
<div
  className="ax-card ax-card--elevation-x0 ax-card--size-medium ax-card--color-darker"
  onClick={undefined}
>
  Lorem Ipsum
</div>
`;
